--- a/app/src/main/res/layout/recyclerviewitem_seved.xml
+++ b/app/src/main/res/layout/recyclerviewitem_seved.xml
@@ -2,12 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewlayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/Background"
     android:padding="8dp"
-    tools:layout_editor_absoluteY="81dp"
-    android:id="@+id/cardViewlayout">
+    tools:layout_editor_absoluteY="81dp">
 
     <FrameLayout
         android:id="@+id/framcard"
@@ -20,7 +19,7 @@
             android:id="@+id/cardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/Tabbackground"
+            app:cardBackgroundColor="@color/Tabbackground_new"
             app:cardCornerRadius="7dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,8 +28,8 @@
                 android:id="@+id/conscard"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true">
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground">
 
                 <ImageView
                     android:id="@+id/artist_imageView"
@@ -43,29 +42,29 @@
 
                 <TextView
                     android:id="@+id/artist_txtv"
-                    android:layout_width="102dp"
-                    android:layout_height="17dp"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:gravity="end"
                     android:singleLine="true"
                     android:text="Omid biglary"
                     android:textAlignment="viewStart"
                     android:textColor="@color/cardview_light_background"
-                    android:textSize="14sp"
+                    android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
                     app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginRight="8dp"
                     tools:ignore="RtlCompat" />
 
                 <TextView
                     android:id="@+id/song_txtv"
-                    android:layout_width="125dp"
-                    android:layout_height="16dp"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="14dp"
@@ -74,13 +73,12 @@
                     android:text="Delbar"
                     android:textAlignment="viewStart"
                     android:textColor="@color/cardview_light_background"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toTopOf="@+id/artist_txtv"
                     app:layout_constraintEnd_toStartOf="@+id/fav_img"
                     app:layout_constraintHorizontal_bias="0.156"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginLeft="4dp"
                     tools:ignore="RtlCompat" />
 
                 <ImageButton
@@ -89,6 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
                     android:layout_marginTop="2dp"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
@@ -96,8 +95,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
                     app:layout_constraintVertical_bias="1.0"
-                    app:srcCompat="@drawable/ic_not_fave"
-                    android:layout_marginRight="4dp" />
+                    app:srcCompat="@drawable/ic_not_fave" />
 
                 <ImageButton
                     android:id="@+id/det_img"
@@ -105,13 +103,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/fav_img"
-                    app:srcCompat="@drawable/ic_details"
-                    android:layout_marginRight="4dp" />
+                    app:srcCompat="@drawable/ic_details" />
 
                 <TextView
                     android:id="@+id/tap_image"
