--- a/app/src/main/res/layout-hdpi/catego_recy_item.xml
+++ b/app/src/main/res/layout-hdpi/catego_recy_item.xml
@@ -7,10 +7,10 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/catego_item_cardview"
-        android:layout_width="125dp"
-        android:layout_height="130dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_width="105dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
         app:cardBackgroundColor="@color/album_item"
         app:cardCornerRadius="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,11 +30,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
                 android:layout_marginTop="8dp"
                 android:text="Music Video(Coming soon)"
                 android:textAlignment="center"
                 android:textColor="@color/cardview_light_background"
-                android:textSize=" 17sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
