--- a/app/src/main/res/layout/slide_toolbar.xml
+++ b/app/src/main/res/layout/slide_toolbar.xml
@@ -76,13 +76,12 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/progresbar_small"
         app:srcCompat="@drawable/ic_play"
-        tools:ignore="VectorDrawableCompat"
-        android:layout_marginRight="16dp" />
+        tools:ignore="VectorDrawableCompat" />
 
 
 
