--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -16,5 +16,8 @@
         android:orderInCategory="1"/>
 
 
+    <item android:id="@+id/about"
+        android:title="About"
+        android:orderInCategory="2"/>
 
 </menu>
