--- a/app/src/main/res/layout-xhdpi/cor_activity_main.xml
+++ b/app/src/main/res/layout-xhdpi/cor_activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/activity_main_cor">
 
     <ImageView
         android:id="@+id/background_main"
@@ -33,8 +34,6 @@
         android:layout_marginTop="1dp"
         android:background="@drawable/round_item"
         android:clipToPadding="true"
-        android:paddingLeft="20dp"
-        android:paddingRight="6dp"
         app:layout_anchor="@+id/toolbar"
         app:layout_anchorGravity="bottom|center"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,19 +54,24 @@
         app:stl_indicatorWithoutPadding="false"
         app:stl_underlineColor="@android:color/transparent" />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swip"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="48dp">
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tab_View_pager"
         android:layout_gravity="bottom"
-        android:layout_marginTop="52dp"
-        app:layout_anchor="@+id/tab_View_pager"
         app:layout_anchorGravity="bottom|center"
         tools:layout_editor_absoluteY="119dp">
 
-
     </android.support.v4.view.ViewPager>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/searchlay"
