--- a/app/src/main/res/layout-xxhdpi/cor_activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/cor_activity_main.xml
@@ -19,7 +19,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:padding="0dp"
         android:theme="?attr/actionBarTheme" />
 
 
@@ -34,8 +33,6 @@
         android:layout_marginTop="1dp"
         android:background="@drawable/round_item"
         android:clipToPadding="true"
-        android:paddingLeft="20dp"
-        android:paddingRight="6dp"
         app:layout_anchor="@+id/toolbar"
         app:layout_anchorGravity="bottom|center"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,17 +57,16 @@
         android:id="@+id/swip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="54dp"
-        android:layout_gravity="bottom"
-        app:layout_anchor="@+id/tab_View_pager"
-        app:layout_anchorGravity="bottom|center"
-        tools:layout_editor_absoluteY="119dp">
+        android:layout_marginTop="54dp">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/tab_View_pager">
+            android:layout_below="@id/tab_View_pager"
+            android:layout_gravity="bottom"
+            app:layout_anchorGravity="bottom|center"
+            tools:layout_editor_absoluteY="119dp">
 
         </android.support.v4.view.ViewPager>
 
