--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2d4059</color>
-    <color name="colorPrimaryDark">#222831</color>
-    <color name="colorAccent">#00adb5</color>
+    <color name="colorPrimary">#152130</color>
+    <color name="colorPrimaryDark">#06111d</color>
+    <color name="colorAccent">#007479</color>
     <color name="defaultTabTextColor">#ffffff</color>
     <color name="dividerColor">#52616b</color>
     <color name="indicatorColor">#644d606e</color>
-    <color name="Tabbackground">#d82d4059</color>
+    <color name="Tabbackground">#e3192c39</color>
     <color name="Tabbackground_new">#65393939</color>
     <color name="Background">#572d4059</color>
     <color name="btn_more">#2c526b</color>
